# cpp-ranges

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
