cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(ranges)

set(SOURCE_DIR "src")

file(GLOB_RECURSE SOURCES "${SOURCE_DIR}/implement/*.cpp")
add_library(${PROJECT_NAME}_STATIC STATIC ${SOURCES})
add_library(${PROJECT_NAME}_SHARED SHARED ${SOURCES})

set_target_properties(${PROJECT_NAME}_STATIC PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
set_target_properties(${PROJECT_NAME}_SHARED PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

target_include_directories(${PROJECT_NAME}_STATIC PRIVATE "${SOURCE_DIR}/include")
target_include_directories(${PROJECT_NAME}_SHARED PRIVATE "${SOURCE_DIR}/include")

install(
	TARGETS ${PROJECT_NAME}_STATIC ${PROJECT_NAME}_SHARED
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)
install(DIRECTORY ${SOURCE_DIR}/include/ DESTINATION include)
